--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,6 +1,19 @@
 on: [push]
 jobs:
+  prisma-scan:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v2
+    - name: Run Prisma Cloud 
+      id: prisma-cloud
+      uses: bridgecrewio/checkov-action@master
+      env:
+        PRISMA_API_URL: https://api2.prismacloud.io
+      with:
+        api-key: ${{ secrets.BC_API_KEY }}
   push-web-image:
+    needs: prisma-scan
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
